@@ -1,0 +1,5 @@
+# source_model_tree_path=('ltbrTrueMean',),gsim_tree_path=('BSSA14',),investigation_time=1.0
+lon,lat,PGA-0.01,PGA-0.04,PGA-0.1,PGA-0.4,PGA-0.6,SA(0.1)-0.01,SA(0.1)-0.04,SA(0.1)-0.1,SA(0.1)-0.4,SA(0.1)-0.6
+-122.25444,37.84060,4.235232E-04,1.872222E-05,8.017507E-06,4.399726E-06,2.426568E-06,1.010341E-03,1.282045E-04,1.766451E-05,6.703220E-06,5.402824E-06
+-122.24958,37.84817,4.164768E-04,1.827723E-05,8.012742E-06,4.584232E-06,2.601120E-06,9.996789E-04,1.251503E-04,1.729165E-05,6.793352E-06,5.557802E-06
+-122.23190,37.86759,4.000065E-04,1.727560E-05,7.988778E-06,4.723979E-06,2.740495E-06,9.752634E-04,1.180523E-04,1.644283E-05,6.851018E-06,5.672401E-06
